--- a/app/src/main/res/layout/banner_viewpager.xml
+++ b/app/src/main/res/layout/banner_viewpager.xml
@@ -5,10 +5,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-
+    <com.youth.banner.Banner
+        android:id="@+id/banner"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="130dp"
+        app:indicator_height="5dp"
+        app:indicator_width="5dp"
+        app:image_scale_type="fit_xy"
+        app:is_auto_play="true" />
 </LinearLayout>
